@@ -61,14 +61,14 @@ struct debug_option_assoc
 };
 static struct debug_option_assoc debugassoc[] =
   {
+    { "exec", DebugExec, "Show diagnostic information relating to -exec, -execdir, -ok and -okdir" },
     { "help", DebugHelp, "Explain the various -D options" },
-    { "tree", DebugExpressionTree, "Display the expression tree" },
+    { "opt",  DebugExpressionTree|DebugTreeOpt, "Show diagnostic information relating to optimisation" },
+    { "rates", DebugSuccessRates, "Indicate how often each predicate succeeded" },
     { "search",DebugSearch, "Navigate the directory tree verbosely" },
     { "stat", DebugStat, "Trace calls to stat(2) and lstat(2)" },
-    { "rates", DebugSuccessRates, "Indicate how often each predicate succeeded" },
-    { "opt",  DebugExpressionTree|DebugTreeOpt, "Show diagnostic information relating to optimisation" },
-    { "exec", DebugExec,  "Show diagnostic information relating to -exec, -execdir, -ok and -okdir" },
-    { "time", DebugTime,  "Show diagnostic information relating to time-of-day and timestamp comparisons" }
+    { "time", DebugTime, "Show diagnostic information relating to time-of-day and timestamp comparisons" },
+    { "tree", DebugExpressionTree, "Display the expression tree" }
   };
 #define N_DEBUGASSOC (sizeof(debugassoc)/sizeof(debugassoc[0]))
 
@@ -138,15 +138,15 @@ insert_primary_noarg (const struct parser_table *entry)
 
 
 static void
-show_valid_debug_options (FILE *fp, int full)
+show_valid_debug_options (int full)
 {
   size_t i;
+  fputs (_("Valid arguments for -D:\n"), stdout);
   if (full)
     {
-      fprintf (fp, "Valid arguments for -D:\n");
       for (i=0; i<N_DEBUGASSOC; ++i)
 	{
-	  fprintf (fp, "%-10s %s\n",
+	  fprintf (stdout, "%-10s %s\n",
 		   debugassoc[i].name,
 		   debugassoc[i].docstring);
 	}
@@ -155,22 +155,64 @@ show_valid_debug_options (FILE *fp, int full)
     {
       for (i=0; i<N_DEBUGASSOC; ++i)
 	{
-	  fprintf (fp, "%s%s", (i>0 ? "|" : ""), debugassoc[i].name);
+	  fprintf (stdout, "%s%s", (i>0 ? ", " : ""), debugassoc[i].name);
 	}
     }
 }
 
 void
-usage (FILE *fp, int status, char *msg)
+usage (int status)
 {
-  if (msg)
-    fprintf (fp, "%s: %s\n", program_name, msg);
+  if (status != EXIT_SUCCESS)
+    {
+      fprintf (stderr, _("Try '%s --help' for more information.\n"), program_name);
+      exit (status);
+    }
 
-  fprintf (fp, _("Usage: %s [-H] [-L] [-P] [-Olevel] [-D "), program_name);
-  show_valid_debug_options (fp, 0);
-  fprintf (fp, _("] [path...] [expression]\n"));
-  if (0 != status)
-    exit (status);
+#define HTL(t) fputs (t, stdout);
+
+  fprintf (stdout, _("\
+Usage: %s [-H] [-L] [-P] [-Olevel] [-D debugopts] [path...] [expression]\n"),
+           program_name);
+
+  HTL (_("\n\
+default path is the current directory; default expression is -print\n\
+expression may consist of: operators, options, tests, and actions:\n"));
+  HTL (_("\
+operators (decreasing precedence; -and is implicit where no others are given):\n\
+      ( EXPR )   ! EXPR   -not EXPR   EXPR1 -a EXPR2   EXPR1 -and EXPR2\n\
+      EXPR1 -o EXPR2   EXPR1 -or EXPR2   EXPR1 , EXPR2\n"));
+  HTL (_("\
+positional options (always true): -daystart -follow -regextype\n\n\
+normal options (always true, specified before other expressions):\n\
+      -depth --help -maxdepth LEVELS -mindepth LEVELS -mount -noleaf\n\
+      --version -xdev -ignore_readdir_race -noignore_readdir_race\n"));
+  HTL (_("\
+tests (N can be +N or -N or N): -amin N -anewer FILE -atime N -cmin N\n\
+      -cnewer FILE -ctime N -empty -false -fstype TYPE -gid N -group NAME\n\
+      -ilname PATTERN -iname PATTERN -inum N -iwholename PATTERN -iregex PATTERN\n\
+      -links N -lname PATTERN -mmin N -mtime N -name PATTERN -newer FILE"));
+  HTL (_("\n\
+      -nouser -nogroup -path PATTERN -perm [-/]MODE -regex PATTERN\n\
+      -readable -writable -executable\n\
+      -wholename PATTERN -size N[bcwkMG] -true -type [bcdpflsD] -uid N\n\
+      -used N -user NAME -xtype [bcdpfls]"));
+  HTL (_("\
+      -context CONTEXT\n"));
+  HTL (_("\n\
+actions: -delete -print0 -printf FORMAT -fprintf FILE FORMAT -print \n\
+      -fprint0 FILE -fprint FILE -ls -fls FILE -prune -quit\n\
+      -exec COMMAND ; -exec COMMAND {} + -ok COMMAND ;\n\
+      -execdir COMMAND ; -execdir COMMAND {} + -okdir COMMAND ;\n\
+\n"));
+
+  show_valid_debug_options (0);
+  HTL (_("\n\
+Use '-D help' for a description of the options, or see find(1)\n\
+\n"));
+
+  explain_how_to_report_bugs (stdout, program_name);
+  exit (status);
 }
 
 void
@@ -827,11 +869,12 @@ process_debug_options (char *arg)
     }
   if (empty)
     {
-      error(EXIT_FAILURE, 0, _("Empty argument to the -D option."));
+      error (0, 0, _("Empty argument to the -D option."));
+      usage (EXIT_FAILURE);
     }
   else if (options.debug_options & DebugHelp)
     {
-      show_valid_debug_options (stdout, 1);
+      show_valid_debug_options (1);
       exit (EXIT_SUCCESS);
     }
 }
